--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -15,49 +15,72 @@
 </head>
 
   <body>
+ <div class="navigation">
+   <nav>
+     <a class="list"href="#">Services</a>
+     <a class="list"href="#">Product</a>
+     <a class="list"href="#">vision</a>
+     <a class="list"href="#">Features</a>
+     <a class="list"href="#">About</a>
+     <a class="list"href="#">Contact</a>
+    </nav>
+    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+</div>
+  
+<section>
+<div class="innovation">
+  <span>Innovation</span>
+  <br>
+  <span>On</span>
+  <br>
+  <span>Demand</span>
 
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
+  <button class="button">Get Started</button>
+</div>
+  <img class="Image"src="img/header-img.png" alt="Image of a code snippet.">
+  
+  </section>
+  <hr>
+  <section class="first-section">
+    <div class="box-style" display: inline-box; text-align:left; margin: 20px; width: 40%;><h3>Features</h3>
+        <p style="line-height: 50px;">Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      
+      
+       <h3>About</h3> 
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+  </section>
 
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  Innovation
-  On
-  Demand
-
-  Get Started
-
-  <img src="img/header-img.png" alt="Image of a code snippet.">
-
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  
 
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <section class="second-section">
+    <h3>Services</h3>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 
 
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <h3>Product</h3>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <h3>Vision</h3>
+   <P>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</P>
 
-  Contact
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
+  </section>
+  <section class="contact">
+    <hr>
+    <h3>Contact</h3>
+  <p>123 Way 456 Street
+      Somewhere, USA
+      1 (888) 888-8888
+      sales@greatidea.io
+    </p>  
+  </section>
 
-  Copyright Great Idea! 2018
+  <footer style="text-align: center;"margin-bottom: 20px;>
+    Copyright Great Idea! 2018
+  </footer>
+
+ 
   
   </body>
 </html>
